--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,18 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="silver">#BEBEBE</color>
+    <color name="off_white">#DDDDDD</color>
+    <color name="dark_gray">#7A7A7A</color>
+    <color name="orange">#FFC107</color>
+    <color name="red">#FF3D00</color>
+    <color name="pink">#E80057</color>
+    <color name="green">#00C569</color>
+    <color name="dark_green">#02A156</color>
+    <color name="whiteTrans">#10000000</color>
+    <color name="gray">#F0F0F0</color>
+    <color name="greenTrans">#EDFBF4</color>
+    <color name="card_color">#F89234</color>
 </resources>
