--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -20,23 +20,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/aet_runtrack_sortby"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="none"
-            app:backgroundTint="@color/white" />
-    </com.google.android.material.textfield.TextInputLayout>
+    <Spinner
+        android:id="@+id/aet_runtrack_sortby"
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:inputType="none"
+        android:textColor="@color/green"
+        android:background="@drawable/spinner_back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
         android:id="@+id/textView4"
@@ -47,8 +43,18 @@
         android:textSize="@dimen/_15sdp"
         android:textColor="@color/dark_gray"
         android:fontFamily="@font/takecute"
-        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
-        app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
-        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />
+        app:layout_constraintBottom_toBottomOf="@+id/aet_runtrack_sortby"
+        app:layout_constraintEnd_toStartOf="@+id/aet_runtrack_sortby"
+        app:layout_constraintTop_toTopOf="@+id/aet_runtrack_sortby" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recy_runfrag"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/aet_runtrack_sortby" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
